Add Lichess and kind of fixed the toogle

--- a/index.html
+++ b/index.html
@@ -20,7 +20,20 @@
         <!-- <script type="text/javascript" src="http://use.typekit.com/rds7nju.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script> -->
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+	<!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>-->
         <script type="text/javascript" src="http://cdn.jquerytools.org/1.2.4/jquery.tools.min.js"></script>
+	   <script src=
+"https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+    </script>
+<script src="/tdk/scripts/jquery.min.js"              type="text/javascript"></script>
+<!-- Jquery - ui right after-->
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="/tdk/scripts/bootstrap.js"                 type="text/javascript"></script>
+<script src="/tdk/scripts/jquery.dataTables.js"         type="text/javascript"></script>
+<script src="/tdk/scripts/dataTables.bootstrap.js"  type="text/javascript"></script>
+
+
+
         <script type="text/javascript" charset="utf-8">
             $(function(){
                $('#connections a[title]').tooltip({ position:"bottom center" });
@@ -47,7 +60,7 @@
 	    <header>
 	        <small>
 	            <a href="#">Contact Info</a>
-	            <div id="contact_info" style="display:none">
+	            <div id="contact_info" style='display:none'>
 	                <h3>Manuel Pichardo M.</h3>
 	                <a href="mailto:manuel.pichardo-marcano@ttu.edu">manuel.pichardo-marcano@ttu.edu</a>
 			<!--<h4>+33 7 51 34 74 24</h4>-->
@@ -68,7 +81,7 @@
 		<section id="content">
 			<header>
 				<h1>Manuel Pichardo Marcano</h1>
-				<h2>Physics Master's Student.</h2>
+				<h2>Physics Phd Student.</h2>
 			</header>
 		
 			<h3>School</h3>
@@ -86,7 +99,8 @@
 				
 
 			<li><a href="./outreach.html" title="outreach">Outreach</a></li>
-                        <li><a href="https://www.postcrossing.com/user/mmarcano22" title="postcards">Postcrossing</a></li>
+			<!--                        <li><a href="https://www.postcrossing.com/user/mmarcano22" title="postcards">Postcrossing</a></li>-->
+                        <li><a href="https://lichess.org/@/mapichar" title="lichess">Add me on Lichess</a></li>
                         </ul>
 
 
@@ -94,7 +108,7 @@
 		</section>
 		
 		<footer>
-			<small>Design from <br><a href="http://kiwigrove.com/" title="Kiwi Grove">Kiwi Grove</a></small>
+			<small>Design from <br><a href="https://github.com/adamstrickland/maori" title="Kiwi Grove">Kiwi Grove</a></small>
 		</footer>
 	</body>
 </html>
