--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Webpage for Manuel de Jesus Pichardo Marcano ">
         <meta name="keywords" content="Physics,graduate student">
         <meta name="author" content="Manuel Pichardo Marcano">
-        <title>Manuel Picharo M</title>
+        <title>Manuel Pichardo M</title>
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
