--- a/outreach.html
+++ b/outreach.html
@@ -54,7 +54,11 @@
 
                         <h3> Astrobitos </h3>
 			<a href='https://astrobitos.org/author/manuelmarcano22/'>Astrobitos</a> is the sister site in Spanish of <a href='https://astrobites.org/'>Astrobites</a>. 
-			
+
+                        <h3> Blog Planeta Tierra</h3>
+			<a href='https://planetatierra.jmarcano.com/'>Planeta Tierra</a> is a blog in Spanish with short articles on the Earth and astronomy in general. 
+
+
                 <h2>Spread the voice in Spanish!</h2>
                         <p>
 
